# alza_sentiments

./: .gitignore  Dockerfile  README.md  app.py  eda_reviews.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: eda_reviews-checkpoint.ipynb
docs/: data_dict.md
docs/data_dictionaries/: data_dict.md
get_data/: alza_review_api_test.py  batch_of_reviews.csv  collect_urls.py  copy_table.sql  db.py  extract_commodity_id.sql  reviews.csv  scrape_batch.py  scrape_batch_bronze.py  sitemap.py
model/: LogReg_grid_search.py  eda_ml_features.ipynb  sentiment_model.pkl  train.csv  train_LogReg.py  train_eda.ipynb
model/bert/: config.json
sql/gold/: gold_ml_price_features.sql
sql/silver/: 01_silver_product.sql
templates/: index.html
